# opengl-workspace

./: .gitignore  .gitmodules
opengl-labs/: CMakeLists.txt
opengl-labs/labs/l1-textures/: l1_textures.cpp
opengl-labs/labs/l2-transformation/: l2_transformation.cpp
opengl-labs/labs/l3-3d/: l3_3d.cpp
textures-lab/: CMakeLists.txt
textures-lab/src/: main.cpp  sb_image_imp.cpp  shader.cpp  shader.h
